Adjusted function call

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,14 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module DDETools.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "j_diff (generic function with 1 method)"
+       "mackeytau (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -50,23 +57,16 @@
    "source": [
     "using CairoMakie\n",
     "using LinearAlgebra\n",
+    "\n",
+    "include(\"../DDETools/DDETools.jl\") \n",
+    "using .DDETools\n",
     "include(\"mackeyglassfunc.jl\") #system of Mackey-Glass equation\n",
-    "include(\"mackeytau.jl\") #Delay formula for Mackey-Glass equation\n",
-    "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"../shared/jacobian.jl\") #Jacobian function\n",
-    "include(\"../shared/newton.jl\") #Newton function\n",
-    "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and for finding equilibria branches)\n",
-    "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to approximate the stability and find the eigenvalues (and eigenvectors and ω if interested in Hopf bifurcation)\n",
-    "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
-    "include(\"../shared/stab_func_DDE.jl\") #uses method explored in (Breda et al 2009) to find stability and eigenvalues (and if asked, also eigenvectors) of equilibria\n",
-    "include(\"../shared/j_eval.jl\") #uses barycentric interpolation to find the l_j(xi) (Lagrange polynomial) values needed for use in stab_func_DDE\n",
-    "include(\"../shared/j_diff.jl\") #finds the differentiation matrix of all interpolation points x_j"
+    "include(\"mackeytau.jl\") #Delay formula for Mackey-Glass equation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "be5d4b96",
    "metadata": {},
    "outputs": [
@@ -90,8 +90,8 @@
     "x0=((beta-gamma)/(gamma))^(1/n) #obtained from solving f(x*,...,x*)=0 problem\n",
     "nd=1 #one delay\n",
     "\n",
-    "y01,feq=create_ststfunc(mackeyglassfunc, x0, [beta,gamma,n,tau],nd, par_indx=4) #finds initial equilibrium point and creates a function to find the equilibria branch\n",
-    "ylist1,ytan1=track_curve(feq,y01,[0.0,1],stepsize=0.01,nmax=100) #tracks equilibria to find the equilibria branch\n",
+    "y01,feq= DDETools.create_ststfunc(mackeyglassfunc, x0, [beta,gamma,n,tau],nd, par_indx=4) #finds initial equilibrium point and creates a function to find the equilibria branch\n",
+    "ylist1,ytan1= DDETools.track_curve(feq,y01,[0.0,1],stepsize=0.01,nmax=100) #tracks equilibria to find the equilibria branch\n",
     "\n",
     "#Below plots the equilibiria branch\n",
     "fig1=Figure()\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "b6ab8081",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "3cc0add2",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
    ],
    "source": [
     "#stability of an equilibrium point\n",
-    "stab_func_matrix(mackeyglassfunc,mackeytau, [x0], [0.4],[gamma,beta,n,tau], [4], nd, doprint=1)"
+    "DDETools.stab_func_matrix(mackeyglassfunc,mackeytau, [x0], [0.4],[gamma,beta,n,tau], [4], nd, doprint=1)"
    ]
   },
   {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "eb2591f3",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
     "stab[1]=1.0 #Note this is an educated guess, the function stab_func_matrix currently doesn't work for delay=0\n",
     "\n",
     "for i in 2:neq\n",
-    "    stab[i]=stab_func_matrix(mackeyglassfunc,mackeytau,xlist1[i],[plist1[i]],[beta, gamma,n,tau],[4],nd,doprint=0,m=m)[1] #returns stability of each equilibirum point (1=stable,0=unstable)\n",
+    "    stab[i]=DDETools.stab_func_matrix(mackeyglassfunc,mackeytau,xlist1[i],[plist1[i]],[beta, gamma,n,tau],[4],nd,doprint=0,m=m)[1] #returns stability of each equilibirum point (1=stable,0=unstable)\n",
     "end\n",
     "\n",
     "stable=(stab.==1.0) #highlights stable indices\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "id": "955dd959",
    "metadata": {},
    "outputs": [
@@ -253,9 +253,9 @@
     "stab_DDE[1]=1.0 #Note again this is an educated guess, the function stab_func_DDE currently doesn't work for delay=0\n",
     "\n",
     "for i in 2:neq\n",
-    "    A0=f_deriv(mackeyglassfunc, xlist1[i],[beta, gamma,n,plist1[i]],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
-    "    A1=f_deriv(mackeyglassfunc, xlist1[i],[beta, gamma,n,plist1[i]],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ)\n",
-    "    stab_DDE[i],=stab_func_DDE([vec(A0),vec(A1)],[plist1[i]],N) #gives stability of each equilibrium point\n",
+    "    A0=DDETools.f_deriv(mackeyglassfunc, xlist1[i],[beta, gamma,n,plist1[i]],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
+    "    A1=DDETools.f_deriv(mackeyglassfunc, xlist1[i],[beta, gamma,n,plist1[i]],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ)\n",
+    "    stab_DDE[i],=DDETools.stab_func_DDE([vec(A0),vec(A1)],[plist1[i]],N) #gives stability of each equilibrium point\n",
     "end\n",
     "\n",
     "stableDDE=(stab_DDE.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "id": "eca4eb12",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "fadae4dd",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -365,9 +365,9 @@
     }
    ],
    "source": [
-    "yh01,fhopf=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contains the method/formula to find the Hopf bifurcation\n",
+    "yh01,fhopf=DDETools.create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contains the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh1,conv1,=DDETools.newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "tau_hopf=yh1[end]\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "8e811512",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "id": "0d2e7b31",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
@@ -469,10 +469,10 @@
     }
    ],
    "source": [
-    "yheq01,fhopfeq1=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau_hopf],[x_hopf],[beta,tau_hopf],[1,4],nd) #outputs (initial) starting point of Hopf information with information on both parameters (τ and β) and hopf function\n",
+    "yheq01,fhopfeq1=DDETools.create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau_hopf],[x_hopf],[beta,tau_hopf],[1,4],nd) #outputs (initial) starting point of Hopf information with information on both parameters (τ and β) and hopf function\n",
     "\n",
-    "yheqlist1,heqtan1=track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47 \n",
-    "yheqlist2,heqtan2=track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,-1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau≈0.47\n",
+    "yheqlist1,heqtan1=DDETools.track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,1,-1],nmax=500) #tracks beta and tau backwards from beta=2, tau≈0.47 \n",
+    "yheqlist2,heqtan2=DDETools.track_curve(fhopfeq1,yheq01,[-1.0,0,0,0,-1,1],nmax=500) #tracks beta and tau forwards from beta=2, tau≈0.47\n",
     "\n",
     "#Plot of continuation/tracking in (τ,β) plane\n",
     "fig5=Figure()\n",
