Adjusted function call

--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "a584c15a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "j_diff (generic function with 1 method)"
+       "neurontau (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -50,30 +50,22 @@
    "source": [
     "using CairoMakie\n",
     "using LinearAlgebra\n",
+    "include(\"../DDETools/DDETools.jl\")\n",
+    "using .DDETools\n",
     "include(\"neuronfunc.jl\") #system of neuron example\n",
-    "include(\"neurontau.jl\") #Delay forumla for neuron example\n",
-    "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"../shared/jacobian.jl\") #Jacobian function\n",
-    "include(\"../shared/newton.jl\") #Newton function\n",
-    "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"../shared/stab_func_matrix.jl\")#uses large matrix method to approximate stability and to find eigenvalues (and eigenvector and ω if interested in Hopf bifurcation)\n",
-    "include(\"../shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
-    "include(\"../shared/stab_func_DDE.jl\")#uses method explored in (Breda et al 2009) to find stability and eigenvalues (and if asked, also eigenvectors) of equilibria\n",
-    "include(\"../shared/j_eval.jl\") #uses barycentric interpolation to find the l_j(xi) (Lagrange polynomial) values needed for use in stab_func_DDE\n",
-    "include(\"../shared/j_diff.jl\") #finds the differentiation matrix of all interpolation points x_j"
+    "include(\"neurontau.jl\") #Delay forumla for neuron example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "9fc884f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.0, 0.0, 2.34], var\"#f_equilibrium#188\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
+       "([0.0, 0.0, 2.34], Main.DDETools.var\"#f_equilibrium#24\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
       ]
      },
      "metadata": {},
@@ -91,13 +83,13 @@
     "taus=1.5\n",
     "\n",
     "nd=3 #there are 3 delays\n",
-    "y01,feq=create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
+    "y01,feq=DDETools.create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,a21,tau1,tau2,taus], nd, par_indx=4)#varying paramter a21 so parameter index is 4\n",
     "#The above outputs an initial equilibirium and a function to find the equilibria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "23a36df6",
    "metadata": {},
    "outputs": [
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "5f278333",
    "metadata": {},
    "outputs": [
@@ -155,7 +147,7 @@
     "#Test stability of initial point (it should be unstable)\n",
     "x0=y01[1:2]\n",
     "p0=y01[3]\n",
-    "stabi,eigvalsi,eigvecs1=stab_func_matrix(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1)\n",
+    "stabi,eigvalsi,eigvecs1=DDETools.stab_func_matrix(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1)\n",
     "unstabindx=findfirst(isequal(1),real(eigvalsi).>0)\n",
     "unstabeigi=eigvalsi[unstabindx]\n",
     "\n",
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -190,8 +182,8 @@
     }
    ],
    "source": [
-    "y02,feq2=create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and find starting point for equilibria branching\n",
-    "alist1,ytan1=track_curve(feq2,y02,[0.0,0,1],nmax=550) #tracks equilibria to give equilibria branch\n",
+    "y02,feq2=DDETools.create_ststfunc(neuronfunc,[0.0,0],[k,beta,a12,0,tau1,tau2,taus], nd, par_indx=4) #we set a21 to 0 and find starting point for equilibria branching\n",
+    "alist1,ytan1=DDETools.track_curve(feq2,y02,[0.0,0,1],nmax=550) #tracks equilibria to give equilibria branch\n",
     "\n",
     "xmat1=hcat([u[1] for u in alist1],[u[2] for u in alist1]) #finds the values of x1 and x2 for the equilibria\n",
     "xlist1=[xmat1[i,:] for i in 1:size(xmat1,1)] #creates a vector of vectors of all the equilibria points\n",
@@ -205,7 +197,7 @@
     "eigvals1=[fill(0.0+0.0*im,n*(1+nd*m)) for _ in 1:neq] #blank array for all eigenvalues found for the equilibria points\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab[i],eigvals1[i],=stab_func_matrix(neuronfunc,neurontau,xlist1[i],[plist1[i]],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m) #outputs the stability (1 for stable, 0 for unstable) and also gives the eigenvalues for each point\n",
+    "    stab[i],eigvals1[i],=DDETools.stab_func_matrix(neuronfunc,neurontau,xlist1[i],[plist1[i]],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m) #outputs the stability (1 for stable, 0 for unstable) and also gives the eigenvalues for each point\n",
     "end\n",
     "\n",
     "stable=(stab.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "669aa48b",
    "metadata": {},
    "outputs": [
@@ -259,11 +251,11 @@
     "stab_DDE=fill(NaN,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    A0=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
-    "    A1=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ_1)\n",
-    "    A2=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=3) #finds partial derivative matrix with respect to x(t-τ_2)\n",
-    "    A3=f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=4) #finds partial derivative matrix with respect to x(t-τ_s)\n",
-    "    stab_DDE[i],=stab_func_DDE([A0,A1,A2,A3],[tau1,tau2,taus],N) #gives stability of each equilibrium point\n",
+    "    A0=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
+    "    A1=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ_1)\n",
+    "    A2=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=3) #finds partial derivative matrix with respect to x(t-τ_2)\n",
+    "    A3=DDETools.f_deriv(neuronfunc, xlist1[i], [k,beta,a12,plist1[i],tau1,tau2,taus],nd,nx=4) #finds partial derivative matrix with respect to x(t-τ_s)\n",
+    "    stab_DDE[i],=DDETools.stab_func_DDE([A0,A1,A2,A3],[tau1,tau2,taus],N) #gives stability of each equilibrium point\n",
     "end\n",
     "\n",
     "stableDDE=(stab_DDE.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -304,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "b6fce3f3",
    "metadata": {},
    "outputs": [
@@ -359,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "e08cf059",
    "metadata": {},
    "outputs": [
@@ -382,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "1447cdca",
    "metadata": {},
    "outputs": [
@@ -404,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "ffd8cae6",
    "metadata": {},
    "outputs": [
@@ -442,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -459,9 +451,9 @@
     }
    ],
    "source": [
-    "yh01,fhopf=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a21 estimates) and a function that contains the method/formula to find the Hopf bifurcation\n",
+    "yh01,fhopf=DDETools.create_hopffunc(neuronfunc,neurontau,[k,beta,a12,0,tau1,tau2,taus],xlist1[unstab_indx],[a21unstab],[4],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a21 estimates) and a function that contains the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh1,conv1,=DDETools.newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "e00c8cf8",
    "metadata": {},
    "outputs": [
@@ -503,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "85dfe439",
    "metadata": {},
    "outputs": [
@@ -549,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
@@ -565,8 +557,8 @@
     }
    ],
    "source": [
-    "yheq01,fhopfeq1=create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,taus],[4,7],nd) #initialises hopf function and initial guess for hopf information with a21≈0.81 and tau_s=1.5\n",
-    "yheqlist1,heqtan1=track_curve(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,1,-1],nmax=1250) #tracks a21 and τ_s over (a21, τ_s) plane\n",
+    "yheq01,fhopfeq1=DDETools.create_hopffunc(neuronfunc,neurontau,[k,beta,a12,a_hopf,tau1,tau2,taus],x_hopf,[a_hopf,taus],[4,7],nd) #initialises hopf function and initial guess for hopf information with a21≈0.81 and tau_s=1.5\n",
+    "yheqlist1,heqtan1=DDETools.track_curve(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,1,-1],nmax=1250) #tracks a21 and τ_s over (a21, τ_s) plane\n",
     "\n",
     "#Plot of continuation/tracking in (a21,τ_s) plane\n",
     "fig6=Figure()\n",
