Adjusted function call

--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "af26b77b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "j_diff (generic function with 1 method)"
+       "inpend1tau (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -58,19 +58,10 @@
    "source": [
     "using CairoMakie\n",
     "using LinearAlgebra\n",
+    "include(\"../DDETools/DDETools.jl\")\n",
+    "using .DDETools\n",
     "include(\"invpend_1delay.jl\") #RHS of single delay inverted pendulum example\n",
-    "include(\"inpend1tau.jl\") #Delay function for inverted pendulum example\n",
-    "include(\"../shared/f_deriv.jl\") #used to find state and/or parameter derivatives\n",
-    "include(\"../shared/jacobian.jl\") #Jacobian function\n",
-    "include(\"../shared/newton.jl\") #Newton function\n",
-    "include(\"../shared/track_curve.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
-    "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to approximate the stability and to find the eigenvalues (and eigenvectors and ω if interested in Hopf bifurcation)\n",
-    "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
-    "include(\"../shared/create_foldfunc.jl\") #finds initial guess for fold information and creates a function that can find the true fold values\n",
-    "include(\"../shared/stab_func_DDE.jl\") #uses method explored in (Breda et al 2009) to find stability and eigenvalues (and if asked, also eigenvectors) of equilibria\n",
-    "include(\"../shared/j_eval.jl\") #uses barycentric interpolation to find the l_j(xi) (Lagrange polynomial) values needed for use in stab_func_DDE\n",
-    "include(\"../shared/j_diff.jl\") #finds the differentiation matrix of all interpolation points x_j"
+    "include(\"inpend1tau.jl\") #Delay function for inverted pendulum example\n"
    ]
   },
   {
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "fb745fe6",
    "metadata": {},
    "outputs": [
@@ -113,12 +104,12 @@
     "nd=1 #number of delays (single delay so nd=1)\n",
     "\n",
     "#Now we looking at finding the equilibria branches\n",
-    "y01,f_equ=create_ststfunc(invpend_1delay,[0.0,0],[a,b,tau],nd,par_indx=1) #pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
+    "y01,f_equ=DDETools.create_ststfunc(invpend_1delay,[0.0,0],[a,b,tau],nd,par_indx=1) #pars_indx=1 as parameter a (the parameter we're varying) is the first parameter\n",
     "#The above outputs the initial guess for x,v and parameter 'a' and the equilibrium function\n",
     "\n",
-    "ylist1,ytan1=track_curve(f_equ,y01,[0.0,0,1],nmax=1000) #initial tangent changes a (initial tangent=[0.0,0,1])\n",
-    "ylist2,ytan2=track_curve(f_equ,y01,[1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in postive x direction\n",
-    "ylist3,ytan3=track_curve(f_equ,y01,[-1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in negative x direction\n",
+    "ylist1,ytan1=DDETools.track_curve(f_equ,y01,[0.0,0,1],nmax=1000) #initial tangent changes a (initial tangent=[0.0,0,1])\n",
+    "ylist2,ytan2=DDETools.track_curve(f_equ,y01,[1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in postive x direction\n",
+    "ylist3,ytan3=DDETools.track_curve(f_equ,y01,[-1.0,0,0],nmax=400) #initial tangent changes x with initial tangent in negative x direction\n",
     "\n",
     "#Below plots the equilibria branches\n",
     "fig1=Figure()\n",
@@ -132,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8a3ff49e",
    "metadata": {},
    "outputs": [
@@ -174,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "89f9557e",
    "metadata": {},
    "outputs": [
@@ -208,7 +199,7 @@
     "stab=fill(NaN,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab[i]=stab_func_matrix(invpend_1delay,inpend1tau,xlist[i],[plist[i]],[a,b,tau],[1],nd,doprint=0) #returns stability of the equilibiria (Outputs 1 for stable and 0 for unstable)\n",
+    "    stab[i]=DDETools.stab_func_matrix(invpend_1delay,inpend1tau,xlist[i],[plist[i]],[a,b,tau],[1],nd,doprint=0) #returns stability of the equilibiria (Outputs 1 for stable and 0 for unstable)\n",
     "end \n",
     "\n",
     "stable=(stab.==1.0)#highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -242,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "d0d84ae2",
    "metadata": {},
    "outputs": [
@@ -263,9 +254,9 @@
     "stab_DDE=fill(NaN,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    A0=f_deriv(invpend_1delay,xlist[i],[plist[i],b,tau],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
-    "    A1=f_deriv(invpend_1delay,xlist[i],[plist[i],b,tau],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ)\n",
-    "    stab_DDE[i],=stab_func_DDE([A0,A1],[tau],N) #gives stability of each equilibrium point\n",
+    "    A0=DDETools.f_deriv(invpend_1delay,xlist[i],[plist[i],b,tau],nd,nx=1) #finds partial derivative matrix with respect to x(t)\n",
+    "    A1=DDETools.f_deriv(invpend_1delay,xlist[i],[plist[i],b,tau],nd,nx=2) #finds partial derivative matrix with respect to x(t-τ)\n",
+    "    stab_DDE[i],=DDETools.stab_func_DDE([A0,A1],[tau],N) #gives stability of each equilibrium point\n",
     "end \n",
     "\n",
     "stableDDE=(stab_DDE.==1.0)#highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -315,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -339,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "fb2711eb",
    "metadata": {},
    "outputs": [
@@ -371,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -388,9 +379,9 @@
     }
    ],
    "source": [
-    "yh01,fhopf=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_indx],[plist[hopf_indx]],[1],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a estimates) and a function that contains the method/formula to find the Hopf bifurcation\n",
+    "yh01,fhopf=DDETools.create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_indx],[plist[hopf_indx]],[1],nd) #outputs initial guess of the Hopf bifurcation (including x, ω and a estimates) and a function that contains the method/formula to find the Hopf bifurcation\n",
     "println(\"The initial guess for Hopf info: $yh01\")\n",
-    "yh1,conv1,=newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "yh1,conv1,=DDETools.newton(fhopf,yh01) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
     "println(\"The true information for the Hopf bifurcation: $yh1\")\n",
     "println(\"converged?: $conv1\")\n",
     "a_hopf=yh1[end]\n",
@@ -402,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "575404f1",
    "metadata": {},
    "outputs": [
@@ -440,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -454,8 +445,8 @@
     }
    ],
    "source": [
-    "y0f1,ffold1=create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],[0.0,0],[1.4],[1],1) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
-    "yff1,convf1,=newton(ffold1,y0f1) #finds value of a for fold for fixed b=1.5\n",
+    "y0f1,ffold1=DDETools.create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],[0.0,0],[1.4],[1],1) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
+    "yff1,convf1,=DDETools.newton(ffold1,y0f1) #finds value of a for fold for fixed b=1.5\n",
     "\n",
     "a_fold=yff1[end]\n",
     "x_fold=yff1[1]\n",
@@ -466,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "f7b79d77",
    "metadata": {},
    "outputs": [
@@ -519,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
@@ -535,8 +526,8 @@
     }
    ],
    "source": [
-    "yheq01,fhopfeq1=create_hopffunc(invpend_1delay,inpend1tau,[a_hopf,0,tau],[0.0,0],[a_hopf,0],[1,2],nd) #initialises hopf function and initial guess for Hopf information including a≈3.59 and b=0\n",
-    "yheqlist1,heqtan1=track_curve(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,-1,-1],nmax=2000) #tracks over a and b plane\n",
+    "yheq01,fhopfeq1=DDETools.create_hopffunc(invpend_1delay,inpend1tau,[a_hopf,0,tau],[0.0,0],[a_hopf,0],[1,2],nd) #initialises hopf function and initial guess for Hopf information including a≈3.59 and b=0\n",
+    "yheqlist1,heqtan1=DDETools.track_curve(fhopfeq1,yheq01,[0.0,0,0,0,0,0,0,-1,-1],nmax=2000) #tracks over a and b plane\n",
     "\n",
     "#Below marks the Hopf bifurcation for fixed b=1.5\n",
     "a_vals=[u[end-1] for u in yheqlist1]\n",
