Added test for Hopf bifurcation

--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -415,6 +415,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06a627ab",
+   "metadata": {},
+   "source": [
+    "We can test the above Hopf values by checking the following holds (which have been obtained by manipulating from the characteristic equation with $\\lambda=+ \\omega i$):\n",
+    "```math\n",
+    "\\begin{align*}\n",
+    "&a \\cos(\\omega \\tau) + b \\omega \\sin(\\omega \\tau)=1+\\omega^2\\tag{3}\\\\\n",
+    "&-a \\sin(\\omega \\tau)+b\\omega \\cos(\\omega \\tau)=0\\tag{4}\n",
+    "\\end{align*}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "d858c977",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The LHS of Equation (3) is: 4.576016620087157\n",
+      "The RHS of Equation (3) is: 4.576016620103823\n"
+     ]
+    }
+   ],
+   "source": [
+    "LHS=a_hopf*cos(om_hopf*tau)+b*om_hopf*sin(om_hopf*tau)\n",
+    "RHS=1+(om_hopf)^2\n",
+    "println(\"The LHS of Equation (3) is: $LHS\")\n",
+    "println(\"The RHS of Equation (3) is: $RHS\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "24022da1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using found Hopf values, the LHS of Equation (4) is:-4.440892098500626e-16, which is very close to 0 so found Hopf values are correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "RHS_4=-a_hopf*sin(om_hopf*tau)+b*om_hopf*cos(om_hopf*tau)\n",
+    "println(\"Using found Hopf values, the LHS of Equation (4) is:$RHS_4, which is very close to 0 so found Hopf values are correct\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e04ccc2",
+   "metadata": {},
+   "source": [
+    "Hence, the Hopf values found using `create_hopffunc` and `newton` seem to be correct so the functions are working well. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3780ce90",
    "metadata": {},
    "source": [
@@ -431,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -457,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "id": "f7b79d77",
    "metadata": {},
    "outputs": [
@@ -510,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
