Added code to check Hopf values

--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -525,6 +525,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0f2b34d",
+   "metadata": {},
+   "source": [
+    "We can test the above Hopf values by checking the following hold (which have been obtained by manipulating from the characteristic equation with $\\lambda=+ \\omega i$):\n",
+    "```math \n",
+    "\\begin{align*}\n",
+    "- \\omega^2 -2\\omega \\beta \\sin(\\omega \\tau_s) - 2 \\kappa \\beta \\cos(\\omega \\tau_s) + \\kappa^2 + \\beta^2 \\cos(2 \\omega \\tau_s) - a_{21}a_{12} \\cos(\\omega(\\tau_1 +\\tau_2))=0 \\tag{3}\\\\\n",
+    "2\\omega \\kappa - 2\\omega \\beta \\cos(\\omega \\tau_s)+ 2\\kappa \\beta \\sin(\\omega \\tau_s)-\\beta^2 \\sin(2 \\omega \\tau_s) + a_{21}a_{12} \\sin(\\omega (\\tau_1 +\\tau_2))=0 \\tag{4}\n",
+    "\\end{align*}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "95419484",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using found Hopf bifurcations above the answer to Equation (3) is -3.687616878522704e-11, which is close to  0 so found Hopf values are correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "eq3ans=-(om_hopf)^2 -2*om_hopf*beta*sin(om_hopf*taus) - 2*k*beta*cos(om_hopf*taus)+k^2+(beta^2)*cos(2*om_hopf*taus) -a_hopf*a12*cos(om_hopf*(tau1+tau2))\n",
+    "println(\"Using found Hopf bifurcations above the answer to Equation (3) is $eq3ans, which is close to  0 so found Hopf values are correct\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ce97431d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using found Hopf bifurcations above the answer to Equation (4) is -4.159839139816768e-11, which is close to  0 so found Hopf values are correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "eq4ans=2*om_hopf*k - 2*om_hopf*beta*cos(om_hopf*taus)+2*k*beta*sin(om_hopf*taus)-(beta^2)*sin(2*om_hopf*taus)+a_hopf*a12*sin(om_hopf*(tau1+tau2))\n",
+    "println(\"Using found Hopf bifurcations above the answer to Equation (4) is $eq4ans, which is close to  0 so found Hopf values are correct\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24eaa715",
    "metadata": {},
    "source": [
@@ -541,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
